--- a/src/components/LandPage.css
+++ b/src/components/LandPage.css
@@ -14,6 +14,9 @@
 .three:hover {
   text-decoration: underline;
 }
+.me-auto Nav.Link {
+  color: #000000 !important;
+}
 .four:hover {
   text-decoration: underline;
 }
@@ -42,7 +45,7 @@
 .signbtn2:hover {
   background-color: #663399 !important;
   color: "white" !important;
-  margin: 0.1rem !important;
+  /* margin: 0.1rem !important; */
 }
 
 .headerimg {
